# keyboard-made-by-python

./: .gitignore  LICENSE  README.md  pyproject.toml
hardware/: pcb.py
notebook/jp/: case.ipynb  pcb.ipynb
src/keyboard_made_by_python/: __init__.py
